--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,13 @@
 <head>
 {% include head.html %}
 
+<style>
+#main {
+    width: 80%; /* 设置页面主要内容区域的宽度 */
+    margin: 0 auto; /* 使内容区域水平居中 */
+}
+</style>
+
 <script src="https://cdn.counter.dev/script.js" data-id="4c8f7caa-2b55-46cd-a995-2c4633303773" data-utcoffset="8"></script>
 
 <!-- Google tag (gtag.js) -->
